integ-tests/tests/snapshots/parser__bad_keys__cr.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-char-in-string]: 
  ┌─ cr:1:2
  │
1 │ ""|=3
  │   invalid character '\r' in string


