integ-tests/tests/snapshots/parser__bad_keys__dotted.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[dotted-key-invalid-type]: dotted key attempted to extend non-table type
  ┌─ dotted:2:1
  │
1 │ a = 1
  │ - non-table
2 │ a.b = 2
  │ ^^^^^^^ attempted to extend table here


