integ-tests/tests/snapshots/parser__bad_keys__newline2.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-char-in-string]: 
  ┌─ newline2:1:2
  │  
1 │   "
  │ ╭─^
2 │ │ "|=3
  │ ╰^ invalid character '\n' in string


