integ-tests/tests/snapshots/parser__bad_keys__newline3.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-char-in-string]: 
  ┌─ newline3:1:11
  │  
1 │   "something
  │ ╭──────────^
2 │ │ something else"=3
  │ ╰^ invalid character '\n' in string


