integ-tests/tests/snapshots/parser__bad_keys__newline_after_equal.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[wanted]: 
  ┌─ newline_after_equal:1:5
  │  
1 │   key=
  │ ╭────^
2 │ │ 3
  │ ╰^ expected a value


