integ-tests/tests/snapshots/parser__bad_keys__none.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[wanted]: 
  ┌─ none:1:1
  │
1 │ =3
  │ ^^^ expected a table key


